--- a/project.css
+++ b/project.css
@@ -1,30 +1,28 @@
 
 #project{
-    position: relative;
-    display: block;
-    width:100%;
-    height: 100%;
-	
+	position: relative;
+	display: block;
+	width:100%;
+	height: 100%;
+
 }
 .tables {
 	padding-left:100px;
 	padding-right:100px;
 }
-table{
-	width:100%;
-}
 
- #diary .tables table, td,tr{
+#diary .tables table, td,tr{
 	border:1px solid gray;
 }
- .firt-line{
+.firt-line{
 	background-color:#568EA6;
+	color: white;
 }
 td{
 	padding:5px;
 }
 * {
-  font-family: "Ubuntu",sans-serif;
+	font-family: "Ubuntu",sans-serif;
 }
 .tab-menu {
 	margin-left:10%;
@@ -42,11 +40,11 @@ td{
 }
 .tab {
 	border-radius: 10px;
-  padding: 10px 20px;
-  background: #568EA6;
-  color:black;
-  cursor: pointer;
-  box-shadow: 0 3px 1px -2px rgba(0,0,0,.2), 0 2px 2px 0 rgba(0,0,0,.14), 0 1px 5px 0 rgba(0,0,0,.12);
+	padding: 10px 20px;
+	background: #568EA6;
+	color:black;
+	cursor: pointer;
+	box-shadow: 0 3px 1px -2px rgba(0,0,0,.2), 0 2px 2px 0 rgba(0,0,0,.14), 0 1px 5px 0 rgba(0,0,0,.12);
 }
 
 .tab:hover{
@@ -55,19 +53,19 @@ td{
 	background-color: #305F72;
 }
 .tab+.tab {
-  margin-left: 10px;
+	margin-left: 10px;
 }
 .tab-menu .active{
 	background-color: #305F72;
 	color: white;
 }
 .content-tab-item {
-  display: none;
+	display: none;
 	width: 100%;
 }
 
 .active-tab {
-  display: inline-block;
+	display: inline-block;
 }
 
 .tab-menus {
@@ -75,17 +73,17 @@ td{
 	margin-right:10%;
 }
 .tabs {
-  padding: 10px 20px;
-  background: #FFF;
-  color: black;
-  cursor: pointer;
- 
+	padding: 10px 20px;
+	background: #FFF;
+	color: black;
+	cursor: pointer;
+
 }
 .tab-menus a{
 	text-decoration:none;
 }
 .tabs+.tabs {
-  margin-left: 10px;
+	margin-left: 10px;
 	color: black ;
 }
 .tabs+.tabs:hover {
@@ -95,114 +93,118 @@ td{
 .tab-menus .actives{
 	font-size: 16px;
 	color:#305F72 ;
-	 border-bottom:2px solid black;
+	border-bottom:2px solid black;
 }
 .content-tab-items {
-  display: none;
+	display: none;
 }
+
+
 .active-tabs {
-  display: inline-block;
+	display: inline-block;
 }
 
 #diary .anhGroup h3{
 	margin-top:30%;
 	color:#FA194F;
-	
+
 }
 #diary .anhGroup img{
 	margin-top:50px;
 	margin-bottom:50px;
-	
+
 }
 #diary .tab-menu a{
 	text-decoration:none;
 }
 .content-tabs{
-    -webkit-transition: all 0.3s ease-in-out;
-    -moz-transition: all 0.3s ease-in-out;
-    -ms-transition: all 0.3s ease-in-out;
-    -o-transition: all 0.3s ease-in-out;
-    transition: all 0.3s ease-in-out;
-    float: bottom;
-    position: relative;
+	-webkit-transition: all 0.3s ease-in-out;
+	-moz-transition: all 0.3s ease-in-out;
+	-ms-transition: all 0.3s ease-in-out;
+	-o-transition: all 0.3s ease-in-out;
+	transition: all 0.3s ease-in-out;
+	float: bottom;
+	position: relative;
 	margin-left:10%;
-	margin-right:15%;
+	margin-right:10%;
 }
 
 .content-tab-items{
 	position:relative;
-	width:70%;
-	
+	width:100%;
+
 }
-.content-tabs .btn-downall{
+.content-tab-item .btn-downall{
 	position:inherit;
-	margin-bottom: 4%;
-	margin-left: 50%
+	margin-bottom: 1%;
+	margin-left: 46%
 }
-.content-tabs .btn-downall .btn{
-	background-color: green;
+.content-tab-item .btn-downall .btn{
+	background-color: #568EA6;
 	border: none;
-	color:#fff;
+	color:black;
 	cursor: pointer;
 	font-size: 15px;
 	width: fit-content;
 
 }
 
-.content-tabs .btn-downall .btn:hover{
+.content-tab-item .btn-downall .btn:hover{
 	background-color: #305F72;
 
 }
-.content-tabs .btn-downall .btn{
+.content-tab-item .btn-downall .btn{
 	text-decoration:none;
 	color:#fff;
 }
-.content-tabs .btn-downall .btn > a{
+.content-tab-item .btn-downall .btn > a{
 	color:#fff;
 	text-decoration: none;
 }
-.thiet-ke{
-	height:auto;
-}
-.thiet-ke >h3{
-	position: inherit;
-}
-.thiet-ke-giay {
-	position:absolute;
-	width:70%;
-	height:100%;
+
+.thietke {
+	display: flex;
+	flex-direction: row;
+
 
 }
-.thiet-ke-figma{
-	position:relative;
-	width:70%;
-	margin-left:80%;
-	height:100%;
+.thietke >div{
+	margin: 10px;
+	width: 60em;
+	height: fit-content;
+
 }
-.thiet-ke .anh-giay, .anh-figma{
-	width: calc(100% + 2em);
+.thietke >div > img{
+	border: 1px solid black;
+	width: 80%;
+	height: 80em;
+
 }
-.thiet-ke  .btn_down .btn {
-  background-color: green;
-  border: none;
-  color:#fff;
-  cursor: pointer;
-  font-size: 15px;
-  position:absolute;
-	margin-left: 2em;
+.thietke  .btn_down .btn {
+	background-color: #568EA6;
+	position: absolute;
 	margin-top: 50%;
-	width: 8em;
+	border: none;
+	color:white;
+	cursor: pointer;
+	font-size: 15px;
+	width: fit-content;
 
 }
 
 /* Darker background on mouse-over */
-.thiet-ke  .btn_down .btn:hover {
+.thietke  .btn_down .btn:hover {
 	background-color: #305F72;
+	color: white;
 }
-.thiet-ke .btn_down .btn a{
+.thietke .btn_down .btn a{
 	text-decoration:none;
-	color:#fff;
+	color: white;
 }
+.thietke .btn_down .btn a:hover{
+	color: white;
+}
+
 #contentC{
 	margin-top:5%;
 	margin-bottom:5%;
@@ -210,7 +212,7 @@ td{
 #contentC .go{
 	position:relative;
 	width:800px;
-	
+
 }
 #contentC .go .bt a{
 	color: black;
@@ -251,10 +253,10 @@ td{
 }
 
 #float-bottom{
-    position: relative;
-  bottom: 0;
-    left: 0;
-    width: 100%;
+	position: relative;
+	bottom: 0;
+	left: 0;
+	width: 100%;
 
 }
 
@@ -336,17 +338,38 @@ th {
 	margin-right:10%;
 }
 .btn-info{
-	position:absolute;
-	margin-left:65%;
-	margin-top:-2%;
+	position:inherit;
+	margin-left:80%;
+	background-color: #E17E09;
+	color: white;
+	border: none;
+}
+.btn-info:hover{
+	background-color: #ff6708;
 }
 .btn-info a{
 	text-decoration:none;
-	color:black;
+	color:white;
 }
 .btn-info a:hover{
 	color:white;
+
 }
+.panel-heading > h4 {
+	font-weight: bold;
+}
+
+.card-body .table-imp > table, tr, td{
+	border:  none;
+}
+
+.card-body > p {
+	text-align:  center;
+	font-style: italic;
+}
+
+
+
 
 
 
